--- a/index.html
+++ b/index.html
@@ -2275,7 +2275,7 @@ class MangoTrackingApp {
             console.log('✅ تم تهيئة النظام بنجاح');
         } catch (error) {
             console.error('❌ خطأ في تهيئة النظام:', error);
-            this.showError('فشل تحميل التطبيق، يرجى تحديث الصفحة');
+            this.showError('');
         }
     }
     
